# eitype

./: .gitignore  Cargo.toml  README.md  build.rs  pixi.toml  pyproject.toml  voicetype
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yaml
python/eitype/: __init__.py
research/: per-key-layout-count-bug.md
src/: lib.rs  main.rs
tests/: long_text.rs
