[package]
name = "eitype"
version = "0.1.0"
edition = "2021"
description = "A wtype-like CLI tool for typing text using Emulated Input (EI) protocol on Wayland"
license = "Apache-2.0"
authors = ["eitype contributors"]
repository = "https://github.com/Adam-D-Lewis/eitype"
keywords = ["wayland", "input", "keyboard", "ei", "libei"]
categories = ["command-line-utilities"]

[dependencies]
# EI protocol implementation
reis = "0.5"

# Event loop
calloop = "0.14"

# XKB for keycode mapping
xkbcommon = "0.9"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async portal support
ashpd = "0.12"
tokio = { version = "1", features = ["rt"] }

# Unix utilities
rustix = { version = "1", features = ["fs"] }

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
strip = true
