[package]
name = "eitype"
version = "0.1.2"
edition = "2021"
description = "A wtype-like CLI tool and library for typing text using Emulated Input (EI) protocol on Wayland"
license = "Apache-2.0"
authors = ["eitype contributors"]
repository = "https://github.com/Adam-D-Lewis/eitype"
readme = "README.md"
keywords = ["wayland", "input", "keyboard", "ei", "libei"]
categories = ["command-line-utilities", "api-bindings"]

[lib]
name = "eitype"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eitype"
path = "src/main.rs"

[dependencies]
# EI protocol implementation
reis = "0.5"

# Event loop
calloop = "0.14"

# XKB for keycode mapping
xkbcommon = "0.9"

# CLI argument parsing (only needed for binary)
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async portal support
ashpd = "0.12"
tokio = { version = "1", features = ["rt"] }

# Unix utilities
rustix = { version = "1", features = ["fs", "event"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Python bindings (optional)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
# Enable integration tests that require a Wayland desktop with EI support
wayland-integration-tests = []

[dev-dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"

[profile.release]
lto = true
strip = true
