[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "eitype"
version = "0.1.0"
description = "Python bindings for eitype - type text on Wayland using the Emulated Input (EI) protocol"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Wayland",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["wayland", "input", "keyboard", "automation", "typing"]

[project.urls]
Repository = "https://github.com/Adam-D-Lewis/eitype"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "eitype"
